# avacity-test

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: base_messages.rs  client.rs  common.rs  decoder.rs  encoder.rs  errors.rs  inventory.rs  main.rs  parser.rs  server.rs
src/modules/: avatar.rs  billing.rs  campaign.rs  chat_decor.rs  component.rs  descriptor.rs  furniture.rs  house.rs  location.rs  mod.rs  notify.rs  outside.rs  passport.rs  player.rs
