[package]
name = "avacity"
version = "0.1.0"
authors = ["exstrim401 <exstrim401@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
crc = "1.8.1"
bytes = "0.5.6"
redis = { version = "0.17.0", default-features = false }
roxmltree = "0.13.0"
lazy_static = "1.4.0"
